K8s-templates/wp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-edi-devops
  labels:
    app: wp-edi
  namespace: devops-edi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wp-edi
  template:
    metadata:
      labels:
        app: wp-edi
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.4.2-php7.2-apache
        ports:
        - containerPort: 80
