K8s-templates/wp-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-wp
  namespace: devops-edi
spec:
  selector:
    matchLabels:
      app: mariadb-wp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb-wp
    spec:
      containers:
      - name: mariadb-wp
        image: rtancman/mariadb-local
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3306
          name: mariadb-wp
