K8s-templates/wp-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: devops-edi
spec:
  type: LoadBalancer
  selector:
    app: mariadb-wp
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
